# notepad-plus-plus-linux

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFESTO.md  README.md
.github/workflows/: package.yml
downloads/: README.md
linux/: CMakeLists.txt
linux/src/: backup.c  backup.h  changehistory.c  changehistory.h  charpanel.c  charpanel.h  doclist.h  editor.c  editor.h  encoding.h  findinfiles.c  findinfiles.h  findreplace.c  findreplace.h  i18n.h  lexer.c  lexer.cpp  lexer.h  macro.c  macro.h  main.c  plugin.h  prefs.c  prefs.h  project.c  run.c  sci_c.h  searchresults.c  session.c  session.h  shortcutmap.c  shortcutmap.h  spell.h  statusbar.c  statusbar.h  styleeditor.c  styleeditor.h  stylestore.c  stylestore.h  toolbar.c  (+3 more)
packaging/: PKGBUILD  README.md  notetux++.desktop  notetux++.spec
packaging/alpine/: APKBUILD
packaging/debian/: changelog  control  copyright  rules
resources/: Info.plist  contextMenu.xml  entitlements.plist  npp.icns  shortcuts.xml  tabContextMenu.xml  toolbarButtonsConf.xml
resources/en.lproj/: InfoPlist.strings
resources/localization/: abkhazian.xml  afrikaans.xml  albanian.xml  amharic.xml  arabic.xml  aragonese.xml  aranese.xml  armenian.xml  assamese.xml  aymara.xml  azerbaijani.xml  bambara.xml  basque.xml  belarusian.xml  bengali.xml  bhojpuri.xml  bosnian.xml  brazilian_portuguese.xml  breton.xml  bulgarian.xml  catalan.xml  cebuano.xml  chichewa.xml  chineseSimplified.xml  corsican.xml  croatian.xml  czech.xml  danish.xml  dhivehi.xml  dogri.xml  dutch.xml  english.xml  english_customizable.xml  esperanto.xml  estonian.xml  ewe.xml  extremaduran.xml  farsi.xml  finnish.xml  french.xml  (+97 more)
scintilla/cocoa/: ScintillaCocoa.h  ScintillaCocoa.mm  ScintillaView.mm
scintilla/src/: EditView.cxx  LineMarker.cxx
src/: AppDelegate.h  AppDelegate.mm  CharacterPanel.h  CharacterPanel.mm  ClipboardHistoryPanel.h  ClipboardHistoryPanel.mm  ColumnEditorPanel.h  ColumnEditorPanel.mm  CommandPalettePanel.h  CommandPalettePanel.mm  DocumentListPanel.h  DocumentListPanel.mm  DocumentMapPanel.h  DocumentMapPanel.mm  EditorView.h  EditorView.mm  FindInFilesPanel.h  FindInFilesPanel.mm  FindReplacePanel.h  FindReplacePanel.mm  FindWindow.h  FindWindow.mm  FloatingPanelWindow.h  FloatingPanelWindow.mm  FolderTreePanel.h  FolderTreePanel.mm  FunctionListPanel.h  FunctionListPanel.mm  GitHelper.h  GitHelper.mm  GitPanel.h  GitPanel.mm  IncrementalSearchBar.h  IncrementalSearchBar.mm  LexUser.cxx  LexUserStub.cxx  MainWindowController.h  MainWindowController.mm  MenuBuilder.h  MenuBuilder.mm  (+69 more)
test-results-03162026/: test03162026.md
test_plugins/: CMakeLists.txt  test_plugins.mm
tools/: add_missing_translations.py  add_translations.py  create_new_languages.py  translate_all.py  translate_all_v2.py  translate_broken_23.py
website/: index.html  style.css
